--- a/weather_map.html
+++ b/weather_map.html
@@ -5,6 +5,23 @@
     <title>Weather map</title>
 </head>
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+<script>
+    (function(){
+        "use strict";
+
+        $.get("http://api.openweathermap.org/data/2.5/weather", {
+            APPID: "c579f1b8e3a3a9ed7a647c1d763d0b15",
+            q:     "San Antonio, TX"
+        }).done(function(data) {
+            console.log(data);
+        });
+
+    }());
+</script>
+
+
 
 </body>
 </html>
