--- a/weather_map.html
+++ b/weather_map.html
@@ -3,8 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather map</title>
+    <link rel="stylesheet" href="css/weather.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Weather Application</h1>
+        <br>
+        <h2>San Antonio</h2>
+            <div class="column">
+                <div class="row">
+                    <p>5000&#8451</p>
+                    
+                    <Span id="c1"></Span>
+                </div>
+                <div class="row">
+                    <p>5000&#8451</p>
+                </div>
+                <div class="row">
+                    <p>5000&#8451</p> 
+                </div>
+            </div>
+    </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <script>
@@ -21,7 +40,7 @@
             var icon = weather.list[0].weather[0].icon;
             var url = "http://openweathermap.org/img/w/" + icon + ".png"
             var img = "<img src='" + url + "'>"
-            $("body").append(img);
+            $("#c1").append(img);
             console.log(url);
         });
 
