--- a/weather_map.html
+++ b/weather_map.html
@@ -6,84 +6,96 @@
     <link rel="stylesheet" href="css/weather.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Weather Application</h1>
-        <br>
-        <h3>Try your location</h3>
+<div class="container">
+    <h1>Weather Application</h1>
+    <br>
+    <h3>Try your location</h3>
 
-            Latitude:
-            <input type="text" name="latitude" placeholder="Enter Latitude" value="">
-        Longitude:
-        <input type="text" name="longitude" placeholder="Enter Longitude" value="">
-        <button>Submit</button>
-        <h2>San Antonio</h2>
-            <div class="column">
-                <div class="row">
+    Latitude:
+    <input type="text" name="latitude" placeholder="Enter Latitude" value="">
+    Longitude:
+    <input type="text" name="longitude" placeholder="Enter Longitude" value="">
+    <button>Submit</button>
+    <h2>San Antonio</h2>
+    <div class="column">
+        <!--<div class="row" id="cast1">-->
 
-                    <p><h3>Thursday</h3></p>
-                    <p>Sept 7th</p>
-                    <p>28.5&#8451/17.5&#8451</p>
+        <!--<p><h3>Thursday</h3></p>-->
+        <!--<p>Sept 7th</p>-->
+        <!--<p>28.5&#8451/17.5&#8451</p>-->
 
-                    <Span id="c1"></Span>
-                </div>
-                <div class="row">
-                    <p><h3>Friday</h3></p>
-                    <p>Sept 8th</p>
-                    <p>28.4&#8451/22.2&#8451</p>
+        <!--<Span id="c1"></Span>-->
+        <!--</div>-->
+        <!--<div class="row" id="cast2">-->
+        <!--<p><h3>Friday</h3></p>-->
+        <!--<p>Sept 8th</p>-->
+        <!--<p>28.4&#8451/22.2&#8451</p>-->
 
-                    <Span id="c2"></Span>
-                </div>
-                <div class="row">
-                    <p><h3>Saturday</h3></p>
-                    <p>Sept 9th</p>
-                    <p>29.4&#8451/19.6&#8451</p>
-                    <Span id="c3"></Span>
+        <!--<Span id="c2"></Span>-->
+        <!--</div>-->
+        <!--<div class="row" id="cast3">-->
+        <!--<p><h3>Saturday</h3></p>-->
+        <!--<p>Sept 9th</p>-->
+        <!--<p>29.4&#8451/19.6&#8451</p>-->
+        <!--<Span id="c3"></Span>-->
 
-                </div>
-            </div>
+        <!--</div>-->
     </div>
+</div>
 
-    <div>
-        <div></div>
+<div>
+    <div></div>
 
-        <!--<form method="post" >-->
+    <!--<form method="post" >-->
 
-            <button>Submit</button>
-        <!--</form>-->
-        
-    </div>
-    <div id="map-canvas"></div>
+    <button>Submit</button>
+    <!--</form>-->
+
+</div>
+<div id="map-canvas"></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBC-IW87cNVhrlkmHMSgYxnU5heW7FCfhM"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBC-IW87cNVhrlkmHMSgYxnU5heW7FCfhM"></script>
 <script>
-    (function(){
+    (function () {
         "use strict";
 
         $.get("http://api.openweathermap.org/data/2.5/forecast", {
             APPID: "c579f1b8e3a3a9ed7a647c1d763d0b15",
-                        lat:    29.423017,
-                       lon:   -98.48527,
+            lat: 29.423017,
+            lon: -98.48527,
 //                        q: 'San Antonio, TX',
-                       units: "imperial",
-                       cnt: 3
-        }).done(function(weather) {
-            var icon = weather.list[0].weather[0].icon;
-            var url = "http://openweathermap.org/img/w/" + icon + ".png"
-            var img = "<img src='" + url + "'>"
-            $("#c1").append(img);
-            console.log(url);
-            
-            var icon1 = weather.list[1].weather[0].icon;
-            var url1 = "http://openweathermap.org/img/w/" + icon1 + ".png"
-            var img1 = "<img src='" + url1 + "'>"
-            $("#c2").append(img1);
-            console.log(url1);
+            units: "imperial",
+            cnt: 3
+        }).done(function (forecast) {
+            var weather = "";
+            var i = 0;
+            var icon = forecast.list[i].weather[0].icon;
+            var url = "http://openweathermap.org/img/w/" + icon + ".png";
+            var img = "<img src='" + url + "'>";
 
-            var icon2 = weather.list[2].weather[0].icon;
-            var url2 = "http://openweathermap.org/img/w/" + icon2 + ".png"
-            var img2 = "<img src='" + url2 + "'>"
-            $("#c3").append(img2);
-            console.log(url2);
+            forecast.list.forEach(function (day) {
+                var html = '<div class="row" id="cast1">' +
+                     +
+                    '<p>' + day.weather.description + '</p>' +
+                    '<p>Sept 7th</p>' +
+                    '<p>' + day.main.temp_max + '&#8451/' + day.main.temp_min + '&#8451</p>' +
+                    '' +
+                    '<Span>' + img + '</Span>' +
+                    '</div>';
+                $(".column").append(html);
+                console.log(url);
+            });
+//            var icon1 = weather.list[1].weather[0].icon;
+//            var url1 = "http://openweathermap.org/img/w/" + icon1 + ".png"
+//            var img1 = "<img src='" + url1 + "'>"
+//            $("#c2").append(img1);
+//            console.log(url1);
+//
+//            var icon2 = weather.list[2].weather[0].icon;
+//            var url2 = "http://openweathermap.org/img/w/" + icon2 + ".png"
+//            var img2 = "<img src='" + url2 + "'>"
+//            $("#c3").append(img2);
+//            console.log(url2);
 
 
         });
@@ -110,7 +122,7 @@
             }
         });
 
-        var codeup = { lat: 29.42307, lng: -98.48527 };
+        var codeup = {lat: 29.42307, lng: -98.48527};
 
         var marker = new google.maps.Marker({
             position: codeup,
@@ -119,7 +131,6 @@
 
     }());
 </script>
-
 
 
 </body>
