--- a/weather_map.html
+++ b/weather_map.html
@@ -77,7 +77,7 @@
                 var html = '<div class="row" id="cast1">' +
                     '<p>San Antonio</p>' +
                     '<p>Sept 7th</p>' +
-                    '<p>Temp Max/Min' + ' ' + day.main.temp_max + '&#8457/' + day.main.temp_min + '&#8457</p>' +
+                    '<p>' + day.main.temp_max + '&#8457/' + day.main.temp_min + '&#8457</p>' +
                     '<Span>' + img + '</Span>' +
                     '</div>';
                 $(".column").append(html);
