--- a/weather_map.html
+++ b/weather_map.html
@@ -75,8 +75,8 @@
             var city = forecast.city.name;
             forecast.list.forEach(function (day) {
                 var html = '<div class="row" id="cast1">' +
-                    '<p>' +  + '</p>' +
-                    '<p>' +  + '</p>' +
+                    '<p>' + day.weather[0].description + '</p>' +
+                    '<p><strong></strong>' +  + '</p>' +
                     '<p>' + day.main.temp_max + '&#8457/' + day.main.temp_min + '&#8457</p>' +
                     '<Span>' + img + '</Span>' +
                     '</div>';
