added js folder

--- a/weather_map.html
+++ b/weather_map.html
@@ -15,7 +15,7 @@
     <input type="text" name="latitude" placeholder="Enter Latitude" value="">
     Longitude:
     <input type="text" name="longitude" placeholder="Enter Longitude" value="">
-    <button>Submit</button>
+    <button id="locationSearch">Submit</button>
     <h2 id="city"></h2>
     <div class="column">
         <!--<div class="row" id="cast1">-->
